@@ -7,4 +7,3 @@ from zope.publisher.interfaces.browser import IDefaultBrowserLayer
 class IDavizLayer(IDefaultBrowserLayer):
     """ A layer specific for this add-on product.
     """
-
