@@ -1,10 +1,10 @@
 """ Daviz Settings Section
 """
 from zope.interface import implements
-from eea.app.visualization.controlpanel.interfaces import IDavizSection
 from zope.formlib.form import FormFields
 from zope import schema
 from zope.component.hooks import getSite
+from eea.app.visualization.controlpanel.interfaces import IDavizSection
 from eea.daviz.config import EEAMessageFactory as _
 
 class InvalidDavizFolder(schema.ValidationError, Exception):
