@@ -1,12 +1,12 @@
 """ Subtypes exhibit interfaces
 """
 # BBB
+import warnings
 from eea.app.visualization.interfaces import \
     IPossibleVisualization as IPossibleExhibitJson
 from eea.app.visualization.interfaces import \
      IVisualizationEnabled as IExhibitJson
 
-import warnings
 warnings.warn("eea.daviz.subtypes.interfaces are deprecated. "
               "Please use eea.app.visualization.interfaces instead",
               DeprecationWarning)
