@@ -3,6 +3,8 @@ Changelog
 
 10.9.dev0 - (unreleased)
 ------------------------
+* Change: fixed PyLint warnings and errors
+  [eduard-fironda refs #84949]
 
 10.8 - (2017-05-02)
 -------------------
